bin_PROGRAMS=jinyong
jinyong_SOURCES=claim.h \
				cmd.c \
				cmd.h \
				const.h \
				draw.c \
				draw.h \
				game.c \
				game.h \
				map.c \
				map.h \
				scence.c \
				scence.h \
				sound.c \
				sound.h \
				typedef.h
#jinyong_LDADD=-liconv
jinyong_LDFLAGS=@SDL_LIBS@ -lSDL_gfx
jinyong_CPPFLAGS=-DPKGDATADIR=\"$(pkgdatadir)/\"
